add content and footer in pages home and about

--- a/templates/main.html
+++ b/templates/main.html
@@ -41,5 +41,16 @@
 	
 {% block body %}{% endblock %}
 
+
+<footer class="container"> 
+	<p class="float-end">
+		<a class="btn border-black" href="/">Вернуться на главную</a>
+	</p> 
+	<p>© 2025 Company, Inc. · 
+		<a class="btn" href="/about.html">О нас</a> · 
+		<a class="btn" href="/posts">Статьи</a>
+	</p> 
+</footer>
+
 </body>
 </html>
