--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,13 @@
 
 {% block body %}
 
-<h1 class="m-top-mod">Основная страница</h1>
+<main class="container px-3 m-top-mod"> 
+    <h1>Главная страница.</h1> 
+    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. 
+        Download, edit the text, and add your own fullscreen background photo to make it your own.</p> 
+    <p class="lead"> 
+        <a href="#" class="btn btn-outline-success">Learn more</a> 
+    </p> 
+</main>
 
 {% endblock %}
